--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇺🇸 美国-334.0KB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
-  - {name: 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-3.37MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-385.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.19MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇨🇳 中国-308.4KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-312.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-385.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-200.5KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
   - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 未知国家-241.5KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-559.7KB/s(Youtube:不良林), server: su10.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su10.chaoxn.top}}
+  - {name: 🇺🇸 美国-273.8KB/s(Youtube:不良林), server: su11.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su11.chaoxn.top}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 未知国家-241.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
